--- a/responsive-design-lab/app/styles/main.css
+++ b/responsive-design-lab/app/styles/main.css
@@ -1,5 +1,6 @@
 /* main.css */
 
+/*
 .container {
   background: #eee;
   overflow: auto;
@@ -11,14 +12,31 @@
     float: left;
 }
 
-/* TODO 3 - style the page */
-
 @media screen and (max-width: 48rem) {
   .container .col {
     width: 95%;
   }
 }
+*/
 
-/* TODO 5.2 - use flexbox */
+.container {
+  display: -webkit-box;  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -ms-flexbox;  /* TWEENER - IE 10 */
+  display: flex;         /* NEW, Spec - Firefox, Chrome, Opera */
+  background: #eee;
+  overflow: auto;
+}
 
-/* TODO 5.4 - use media query with Flexbox*/
+.container .col {
+  flex: 1;
+  padding: 1rem;
+}
+
+@media screen and (max-width: 48rem) {
+  .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-flow: column;
+  }
+}
